@@ -1,4 +1,5 @@
 
+  * You can set the ratings of tracks in playlist directly clicking in the stars
   * Control Menu show the status of the Smart or Loop mode
   * Added last.fm as cover source in the cover download dialog
   * Added a lyric editor in the track editor
